# vr_annotator

./: README.md  backend.py  pyproject.toml
vr_tool/: create_cell_objects.py  main.html  main.js  mask.js  vis.js
